--- a/templates/httpd-logstash.conf.j2
+++ b/templates/httpd-logstash.conf.j2
@@ -131,6 +131,12 @@ Listen 8444
     ProxyPassReverse http://{{ es_address }}:9199
   </LocationMatch>
 
+  # kibana 5.2 wants this..
+  <LocationMatch "^(/_nodes/_local.*)$">
+    ProxyPassMatch http://localhost:9199
+    ProxyPassReverse http://localhost:9199
+  </LocationMatch>
+
 </VirtualHost>
 
 Listen 443
