--- a/templates/httpd-logstash.conf.j2
+++ b/templates/httpd-logstash.conf.j2
@@ -143,6 +143,12 @@ Listen 8444
     ProxyPassReverse http://localhost:9199
   </LocationMatch>
 
+  # kibana 5.5 wants this
+  <LocationMatch "^/api/index_patterns/.*$">
+    ProxyPassMatch http://localhost:9199
+    ProxyPassReverse http://localhost:9199
+  </LocationMatch>
+
 </VirtualHost>
 
 Listen 443
